Rename reject endpoint to revoke
